# bnf

./: .gitignore
docs/: design.md
src/: CMakeLists.txt
src/bnf/: CMakeLists.txt
src/bnf/src/: main.cpp
src/corebnf/: CMakeLists.txt
src/corebnf/include/bnf/: bnf.h  grammar.h
src/corebnf/src/: bnf.cpp  bnf_grammar.h  grammar.cpp
src/corebnf/test/: resource.cpp
src/corebnf/test/inputs/: test.bnf
